<resources>
    <string name="app_name">Google Map Add On</string>
    <string name="title_activity_maps">Map</string>
    <string name="hintSrc">Enter the Source</string>
    <string name="hintDestn">Enter the Destination</string>
    <string name="startNav">Start Navigation</string>
    <string name="hintStopOff">Enter the Stop - off Location</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnRoute">Draw the Route</string>
    <string name="btnSearch">Search</string>
    <string name="btnNavigation">Navigate</string>
    <string name="appName">Google Maps Navigation Add-On</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hintSearch">Search</string>
    <string name="hint_location">Enter the location</string>
    <string name="title_activity_directions_jsonparser">DirectionsJSONParser</string>
    <string name="changeView">Change View</string>
    <string name="title_activity_faq">FAQ</string>
</resources>
