<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSrc"
            android:hint="@string/hintSrc"
            android:layout_margin="10dp"
            android:layout_weight="0.9" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_mylocation"
            android:layout_weight="0.1"
            android:background="@mipmap/ic_mylocation"
            android:onClick="onmylocation" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDestn"
        android:hint="@string/hintDestn"
        android:layout_margin="10dp"
        android:layout_weight="0.5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtStopOff"
        android:layout_margin="10dp"
        android:hint="@string/hintStopOff" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRoute"
            android:id="@+id/btnRoute"
            android:layout_gravity="left"
            android:onClick="onRouting"
            android:layout_weight="0.5"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/btnZoomIn"
            android:onClick="onZoom"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/btnZoomOut"
            android:onClick="onZoom"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeView"
            android:id="@+id/changeView"
            android:onClick="changeView"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="3dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Traffic"
            android:id="@+id/btn_st"
            android:layout_weight="0.5"
            android:layout_marginBottom="9dp"
            android:nestedScrollingEnabled="true"
            android:onClick="onShowTraffic" />

    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="500dp" android:id="@+id/map" tools:context=".MapsActivity"
    android:name="com.google.android.gms.maps.SupportMapFragment" />


</LinearLayout>
</ScrollView>